# ferum_customs

./: -la .pre-commit-home  .coverage  .dockerignore  .env  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  AGENTS.md  BARE_METAL_INSTALL.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DEPLOY_CHECKLIST.md  DISASTER_RECOVERY.md  Dockerfile  Dockerfile.frappe  INSTALL.md  MANIFEST.in  Makefile  README.md  README_EN.md  README_audit.md  SECURITY.md  SUMMARY.md  Technical Specification  agent.md  ai_tasks.json  backup.md  dev-requirements.txt  docker-compose.debug.yml  docker-compose.debug.yml.rej  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.js  ferum_tasks.md  files_for_review.md  fix_debug_indent.patch  (+9 more)
.codex/: fix_ci_issues.yaml  project.yaml  task.md
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: post-commit
.github/: PULL_REQUEST_TEMPLATE.md
.pre-commit-home/: db.db
.venv_dev/: pyvenv.cfg
code_review/: .codex_tasks_fix-frappe-db.yaml.35b14d2d.patch  .devcontainer_devcontainer.json.91058cfe.patch  .pre-commit-config.yaml.82c3b367.patch  .review_cache.json  docker-compose.debug.yml.166ed3ed.patch  docker-compose.override.yml.f772bd54.patch  docker-compose.test.yml.0d4080c6.patch  docker-compose.yml.4e5e90c6.patch  docker_entrypoint.sh.1fd0da03.patch  ferum_customs___init__.py.3c6240c0.md  ferum_customs___init__.py.3c6240c0.patch  ferum_customs_api___init__.py.0763d65f.patch  ferum_customs_bench_commands___init__.py.87be9ad5.md  ferum_customs_bench_commands___init__.py.87be9ad5.patch  ferum_customs_bench_commands_run_tests.py.95f799c6.patch  ferum_customs_config___init__.py.7aa998d0.patch  ferum_customs_config_settings.py.4a1f87b3.patch  ferum_customs_constants.py.a8b230f6.patch  ferum_customs_custom_logic___init__.py.1de097d3.patch  ferum_customs_custom_logic_file_attachment_utils.py.e8642829.patch  ferum_customs_custom_logic_payroll_entry_hooks.py.6456f288.patch  ferum_customs_custom_logic_service_object_hooks.py.68586523.patch  ferum_customs_custom_logic_service_report_hooks.py.4219b173.patch  ferum_customs_custom_logic_service_request_hooks.py.49c4963e.patch  ferum_customs_dev_hooks.py.ac127416.md  (+124 more)
(+585 files in other folders)
